--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"
-        <title>Odin Recipes</title>
+        <title>Recipes</title>
     </head> 
     <body>
         <h1>Odin Recipes</h1>
         <a href="recipes/lemon-chicken-orzo-soup.html">Lemon Chicken Orzo Soup</a>
+        <img src="./images/lemonchickenorzosoup.jpg" height="310" width="360">
     </body>
 </html>
