Correct photo link and add description

--- a/recipes/lemon-chicken-orzo-soup.html
+++ b/recipes/lemon-chicken-orzo-soup.html
@@ -7,5 +7,9 @@
     </head>
     <body>
         <h1>Lemon Chicken Orzo Soup</h1>
+        <img src="../images/lemonchickenorzosoup.jpg" alt="A photo of a bowl of lemon chicken orzo soup containing carrots, celary, and chicken." height="310" width="360">
+        <h2>Descripton</h2>
+            <p>This lemon chicken orzo soup is comfort in a bowl. It is so flavorful with tender pieces of chicken in a lemony broth with orzo pasta, carrots, onions, celery, and baby spinach. This lemon chicken orzo soup with brighten even the gloomiest winter day. </p>
+            <p>This soup is easy to prepare and leftovers warm up well. The lemon is perky and all the other ingredients build upon each other to an absolutely delicious meal.ß</p>
     </body>
 </html>
