--- a/recipes/lemon-chicken-orzo-soup.html
+++ b/recipes/lemon-chicken-orzo-soup.html
@@ -10,6 +10,33 @@
         <img src="../images/lemonchickenorzosoup.jpg" alt="A photo of a bowl of lemon chicken orzo soup containing carrots, celary, and chicken." height="310" width="360">
         <h2>Descripton</h2>
             <p>This lemon chicken orzo soup is comfort in a bowl. It is so flavorful with tender pieces of chicken in a lemony broth with orzo pasta, carrots, onions, celery, and baby spinach. This lemon chicken orzo soup with brighten even the gloomiest winter day. </p>
-            <p>This soup is easy to prepare and leftovers warm up well. The lemon is perky and all the other ingredients build upon each other to an absolutely delicious meal.ß</p>
+            <p>This soup is easy to prepare and leftovers warm up well. The lemon is perky and all the other ingredients build upon each other to an absolutely delicious meal.</p>
+        <h2>Ingredients</h2>
+            <ul>
+                <li>8 ounces orzo pasta</li>
+                <li>1 teaspoon olive oil</li>
+                <li>3 medium carrots, chopped</li>
+                <li>3 ribs celery, chopped</li>
+                <li>1 medium onion, chopped</li>
+                <li>2 cloves garlic, minced</li>
+                <li>1/2 teaspoon dried thyme</li>
+                <li>1/2 teaspoon dried oregano</li>
+                <li>salt and pepper to taste</li>
+                <li>1 bay leaf</li>
+                <li>32 ounces fat-free, low sodium chicken broth</li>
+                <li>1/2 cup fresh lemon juice</li>
+                <li>1 lemon, zested</li>
+                <li>8 ounces cooked chicken breast, chopped</li>
+                <li>1 (8 ounce) package baby spinach leaves</li>
+                <li>1 lemon sliced for garnish (optional)</li>
+                <li>1/4 cup grated parmesan cheese (optional)</li>
+            </ul>
+        <h2>Steps</h2>
+            <ol>
+                <li>Bring a large pot of lightly salted water to a boil. Stir in orzo and return to a boil. Cook pasta uncovered until partially cooked through but not yet soft, about 5 minutes. Drain and risne with cold water until cooled completely.</li>
+                <li>Meanwhile, heat olive oil in a large pot over medium heat. Add carrots, celery, and onion; cook until vegetables begin to soften and onion becomes translucent, about 5 minutes. Add garlic; cook and stir until fragrant, about 1 minute more. Season mixture with thyme, oregano, bay leaf, salt, and black pepper; continue cooking another 30 seconds before pouring chicken broth into the pot.</li>
+                <li>Bring broth to a boil. Patrially cover the pot, reduce heat to medium-low, and simmer until vegetables are just tender, about 10 minutes.</li>
+                <li>Sitr orzo, lemon juice, and lemon zest into broth; add chicken. Cook until chicken and orzo are heated through, about 5 minutes. Add baby spinach; cook until spinach wilts inot broth and orzo is tender, 2 to 3 minutes. Ladel soup into bowls; garnish with lemon slices and parmesan cheese.</li>
+            </ol>
     </body>
 </html>
