--- a/recipes/iced-dried-cherry-biscuits.html
+++ b/recipes/iced-dried-cherry-biscuits.html
@@ -8,6 +8,39 @@
     <body>
         <h1>Iced Dried Cherry Biscuits</h1>
         <img src="../images/iceddriedcherrybiscuits.jpg" alt="Wire rack of iced dried cherry biscuits next to a bowl of icing on a counter." height="310" width="410">
-        <h2></h2>
+        <h2>Description</h2>
+            <p>These buttery biscuits flavored with dried cherries and drizzled with icing are flaky and simply delicious.</p>
+            <p>Resist peeking into the oven while the biscuits are baking-biscuits need consisten heat to rise and brown and any tempurature fluctuation runs the risk of flat biscuits.</p>
+        <h2>Ingredients</h2>
+            <ul>
+                <li>2 1/4 cupts flour, plus more for rolling</li>
+                <li>3/4 cup coarsely chopped dried cherries</li>
+                <li>2 tablespoons white sugar</li>
+                <li>1 tablespoon baking powder</li>
+                <li>1 1/2 teaspoons oragne zest, plus more for garnish</li>
+                <li>1 teaspoon baking soda</li>
+                <li>1 tablespoon fine sea salt</li>
+                <li>1 stick (8 tablespoons) butter</li>
+                <li>3/4 cup full-fat Greek yogurt</li>
+                <li>1/2 cup very cold orange juice, or more as needed</li>
+            </ul>
+        <h3>Icing:</h3>
+            <ul>
+                <li>1 cup sifted powdered sugar</li>
+                <li>5 teaspoons whole milk</li>
+                <li>1/8 teaspoon fine sea salt</li>
+            </ul>
+        <h2>Steps</h2>
+            <ol>
+                <li>Preheat the oven to 425 degrees F (218 degrees C). Line a large baking sheet with parchment paper.</li>
+                <li>Whisk together flour, dried cherries, sugar, baking powder, orange zest, baking soda, and fine sea salt in a large bowl.</li>
+                <li>Coat whole stick of butter in the flour mixture. Grate butter on the large holes of a box grater into bowl. If butter starts to melt, coat butter in flour mixture again and continue grating. Use your fingers to toss butter in flour mixture until all butter pieces are separated and coated in flour. Mixture should resemble coarse crumbs.</li>
+                <li>Whisk together yogurt and orange juice in a small bowl; add to flour mixture. Gently fold to bring dough together. Dough should be moistened but still crumbly. If dough is too dry, add more cold orange juice, 1 tablespoon at a time, until fully moistened.</li>
+                <li>Turn dough out onto a lightly floured work surface. Lightly knead three or four times until dough comes together. Sprinkle with flour; pat to 3/4 inch thickness. Cut dough into four equal portions. Stack portions, press down, and pat again to form a 3/4-inch-thick rectangle. Repeat process three times, adding flour as needed.</li>
+                <li>Press a 2 1/2- to 3-inch biscuit cutter straight down into dough to cut out biscuits. Gently knead scraps together, pat to 3/4-inch thickness, and repeat cutting. Arrange on a prepared baking sheet (biscuits should be barely touching).</li>
+                <li>Bake until tops are crisp and golden brown, 15 to 16 minutes. Let cool on the baking sheet for 5 minutes.</li>
+                <li>Stir together powdered sugar, milk, and 1/8 teaspoon sea salt in a bowl until icing is well combined. Drizzle biscuits with icing; garnish with more orange zest.</li>
+                <li>Store in an airtight container up to 3 days; chill up to 1 week. To reheat, bake about 10 minutes at 375 degrees F (190 degrees C).</li>
+            </ol>
     </body>
 </html>
