Add Chicken al Pastor

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
         <h1>Odin Recipes</h1>
             <p><a href="recipes/lemon-chicken-orzo-soup.html">Lemon Chicken Orzo Soup</a></p>
             <p><a href="recipes/iced-dried-cherry-biscuits.html">Iced Dried Cherry Biscuits</a></p>
+            <p><a href="recipes/chicken-al-pastor.html">Chicken al Pastor Tacos</a></p>
     </body>
 </html>
