--- a/recipes/chicken-al-pastor.html
+++ b/recipes/chicken-al-pastor.html
@@ -3,9 +3,45 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Chicken Al Pastor</title>
+        <title>Chicken al Pastor</title>
     </head>
     <body>
-        
+        <h1>Chicken al Pastor Tacos</h1>
+        <img src="../images/chickenalpastor.jpg" alt="A plate with three al pastor tacos topped with pinapple, onions, and chopped cilantro." height="310" width="360">
+        <h2>Description</h2>
+            <p>This chicken al pastor features almost-charred pineapple and toasty spicy chicken that is incredibly tender and juicy. Serve with chopped white onion and fresh cilantro.</p>
+        <h2>Ingredients</h2>
+            <ul>
+                <li>4 dried guajillo chiles, stemmed and seeded</li>
+                <li>2 tablespoons achiote paste</li>
+                <li>6 large garlic cloves, peeled</li>
+                <li>1 (7 ounce) can chipotle peppers in adobo sauce, drained</li>
+                <li>1 1/3 cups finely chopped onion, divided</li>
+                <li>2/3 cup orange juice</li>
+                <li>3 tablespoons apple cider vinegar</li>
+                <li>3 tablespoons olive oil</li>
+                <li>1 tablespoon ground cumin</li>
+                <li>1 tablespoon light brown sugar</li>
+                <li>1 teaspoon kosher salt</li>
+                <li>3 pounds skinless, boneless chicken thights, cut in half</li>
+                <li>8 (12-inch) jumbo wooden skewers</li>
+                <li>1 large fresh pineapple-peeled, cored, and sliced</li>
+                <li>20 (6 inch) corn tortillas</li>
+                <li>1/4 cup roughly chopped fresh cilantro</li>
+            </ul>
+        <h2>Steps</h2>
+            <ol>
+                <li>Heat a skillet over medium-high heat. Add dried chiles; cook, turning occasionally, until toasted and blistered in spots, 3 to 5 minutes. Add 1 cup water to just cover the chiles, and bring to a simmer over medium-high. Cover and cook, undisturbed, until softened, about 5 minutes. Drain well.</li>
+                <li>Combine chiles, achiote, garlic, chipotles, 2/3 cup onion, orange juice, vinegar, oil, cumin, brown sugar, and salt in a blender; process until smooth, about 30 seconds. Reserve 1/2 cup marinade, cover, and refidgerate until ready to use.</li>
+                <li>Place remaining marinade in a shallow dish or large resealable plastic bag, add chicken; toss to evenly coat. Cover chicken with plastic wrap and refridgerate at least 8 hours or up to 24 hours.</li>
+                <li>Place wooden skewers in a shallow dish; cover with water by 1 inch. Let stand at room temperature while chicken marinates.</li>
+                <li>Preheat oven to 400 degrees F (200 degrees C). Position oven rack 8 inches away from heating element. Line a small roasting pan or 13x9 inch baking dish with aluminum foil.</li>
+                <li>Thread 1 pineablle slice onto 2 skewers, being sure to pierce through the center core, (skewers will be aobut 1 inch apart), leaving a 1 1/2-inch space from end of skewer. Thread 5 to 6 pieces of marinated chicken, stacking on top of pineapple; thread 1 pineapple slice. Repeat process, ending with pineapple slice, until all chicken pieces and pineapple slices are used, amking 4 stacks total. Brush with an remaining marinade from chicken.</li>
+                <li>Place stacked skewers in the prepared pan, resting skewer ends on edge of pan so that the chicken doesn't touch the bottom of the pan.</li>
+                <li>Bake in the preheated oven for 30 minutes. Flip skewers over, brush with reserved 1/2 cup marinade. Bake until chicken is no longer pink in the center and the juices run clear, about 30 minutes. An instant-read thermometer inserted into the center should read 160 degrees F (71 degrees C). Increase oven temperature to broil; broil until browned and crispy, 3 to 5 minutes. Flip, and broil until browned and cripsy, 3 to 5 minutes.</li>
+                <li>Meanwhile, heat a large skillet over high heat. Working two at a time, add tortillas; cook, turning once, until heated and browning in some spots, 1 to 2 minutes per side. Repeat with remaining tortillas.</li>
+                <li>Remove chicken and pineapple from skewers, place on cutting board, roughly chop.</li>
+                <li>Divide chicken and pineapple between heated tortillas; top with remaining cilantro.</li>
+            </ol>
     </body>
 </html>
